fix scrollbar

--- a/src/sass/elements.scss
+++ b/src/sass/elements.scss
@@ -56,6 +56,7 @@
 }
 .custom-scrollbar::-webkit-scrollbar {
   height: 10px;
+  background-color: rgb(255, 0, 0, 0.2);
 }
 .custom-scrollbar::-webkit-scrollbar-thumb {
   background-color: $apple-red;
